--- a/books/Storyboards/Main.storyboard
+++ b/books/Storyboards/Main.storyboard
@@ -249,10 +249,10 @@
             </objects>
             <point key="canvasLocation" x="-3396" y="-499"/>
         </scene>
-        <!--SearchByText-->
+        <!--SearchOnline-->
         <scene sceneID="JUq-IZ-EpW">
             <objects>
-                <viewControllerPlaceholder storyboardName="SearchByText" id="ciW-Jd-Gs4" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="SearchOnline" id="ciW-Jd-Gs4" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9UH-iZ-rNO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3400" y="-554"/>
